syntax = "proto3";

package messages.v1;

option go_package = "ssuspy-proto/gen/messages/v1;messagesv1";

service MessagesService {
  rpc CreateMessage(CreateMessageRequest) returns (CreateMessageResponse);
  rpc GetMessage(GetMessageRequest) returns (GetMessageResponse);
  rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse);
}

message CreateMessageRequest {
  bytes payload = 1; // bson
}

message CreateMessageResponse {}

message GetMessageRequest {
  int64 chat_id = 1;
  int32 message_id = 2;
  repeated string connection_ids = 3;
}

message GetMessageResponse {
  bytes payload = 1; // bson
}

message GetMessagesRequest {
  int64 chat_id = 1;
  repeated int32 message_ids = 2;
  repeated string connection_ids = 3;
  bool with_edits = 4;
  int32 offset = 5;
  int32 limit = 6;
}

message GetMessagesResponse {
  repeated bytes payload = 1; // bson
  bool has_forward = 2;
  bool has_backward = 3;
}
