syntax = "proto3";

package pb;

service Bot {
    rpc AddBot (AddBotRequest) returns (AddBotReply);
    rpc RemoveBot (RemoveBotRequest) returns (RemoveBotReply);
}

message AddBotRequest {
    int64 id = 1;
}

message AddBotReply {
    int64 id = 1;
    string username = 2;
}

message RemoveBotRequest {
    int64 id = 1;
}

message RemoveBotReply {
    int64 id = 1;
    string username = 2;
}
